# explainability-engine

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py  论坛发帖内容.md
analyzers/: __init__.py  causal.py  descriptive.py  parser.py  predictive.py
cli/: __init__.py  main.py
config/: __init__.py  domain_loader.py  settings.py
config/domains/: generic.yaml  marketing.yaml  pricing.yaml  risk.yaml
core/: __init__.py  models.py  orchestrator.py  state_machine.py
examples/: sample_pricing.csv
llm/: __init__.py  client.py  data_scanner.py  guardrails.py  prompts.py
report/: __init__.py  generator.py
report/renderers/: __init__.py  html.py  markdown.py
rules/: __init__.py  engine.py  explanation_rules.py  flow_rules.py  validation_rules.py
tests/: test_causal.py  test_descriptive.py  test_parser.py  test_report.py  test_rules.py  test_state_machine.py
